[ENG-1319] - Implemented: Fix layouts on mobile for Lead Generation

--- a/src/layouts/header/Header.css
+++ b/src/layouts/header/Header.css
@@ -1,5 +1,5 @@
 .im-header {
-  height: 80px;
+  height: 10vh;
   padding: 30px 50px;
   display: flex;
   justify-content: space-between;
