--- a/src/pages/home/components/faq/FAQ.css
+++ b/src/pages/home/components/faq/FAQ.css
@@ -8,7 +8,7 @@
     padding-top: 10px;
     text-align: center;
     color: var(--white-color);
-    font-size: var(--font-size-8);
+    font-size: var(--font-size-11);
   }
 
   hr {
