--- a/src/pages/home/components/featured-by/FeaturedBy.css
+++ b/src/pages/home/components/featured-by/FeaturedBy.css
@@ -1,9 +1,9 @@
 .im-featured-by {
   background: var(--blue-gradient);
   width: 100%;
-  height: 250px;
+  height: 35vh;
   overflow: hidden;
-  padding-block: 20px;
+  padding-block: 40px;
   display: flex;
   flex-direction: column;
 
@@ -11,7 +11,7 @@
     width: 100%;
     text-align: center;
     color: var(--white-color);
-    font-size: var(--font-size-7);
+    font-size: var(--font-size-12);
   }
 
   hr {
