--- a/src/pages/home/components/lead-generation/LeadGeneration.css
+++ b/src/pages/home/components/lead-generation/LeadGeneration.css
@@ -29,7 +29,7 @@
 
     h2 {
       text-align: center;
-      font-size: var(--font-size-15);
+      font-size: var(--font-size-16);
       background: var(--error-gradient);
       background-clip: text;
       -webkit-text-fill-color: transparent;
